--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <li class="page-item disabled">
       <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
     </li>
-    <li class="page-item"><a class="page-link" href="index1.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="index2.html">2</a></li>
-    <li class="page-item"><a class="page-link" href="index3.html">3</a></li>
+    <li class="page-item"><a class="page-link" href="Abas1.html">1</a></li>
+    <li class="page-item"><a class="page-link" href="Abas2.html">2</a></li>
+    <li class="page-item"><a class="page-link" href="Abas3.html">3</a></li>
     <li class="page-item">
       <a class="page-link" href="#">Next</a>
     </li>
