--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="card-body">
     <h5 class="card-title">Metode Pembayaran</h5>
     <p class="card-text">Dana , oppo , shopepay , quris , seabank</p>
-    <a href="#" class="btn btn-primary">lanjut</a>
+    <a href="Pembayaran.htmk" class="btn btn-primary">lanjut</a>
   </div>
   <div class="card-footer text-muted">
     Dibuat oleh devlovment #*Abas*#
