--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="icon" href="https://raw.githubusercontent.com/Mod-vvp/game1/main/favicon.ico" type="image/x-icon">
+   <link rel="icon" href="https://github.com/Mod-vvp/AkunMurahh/blob/e8f1d61bcf17876944a32c47a5d4fbab28dd7318/king%20of%20all%20shops.png" type="image/x-icon">
   <title>JualBeliAkun</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
